src/assembler/syntax.bnf
FILE ::= STATEMENTS |;
STATEMENTS ::= STATEMENT STATEMENTS | STATEMENT;
STATEMENT ::= S_AWAIT | S_ABORT | S_EXIT | S_START | IF_ELSE | FOR | ASSIGNMENT;
S_AWAIT ::= AWAIT semicolon;
S_ABORT ::= ABORT semicolon;
S_EXIT ::= EXIT semicolon;
S_START ::= START semicolon;
AWAIT ::= await AWAIT_ANY | await AWAIT_ALL | await AWAIT_CALL_OR_IDENT;
AWAIT_ANY ::= any ident;
AWAIT_ALL ::= all ident;
AWAIT_CALL_OR_IDENT ::= ident roundopen VALUE roundclose | ident roundopen roundclose | ident;
CALL ::= ident roundopen VALUE roundclose | ident roundopen roundclose;
VALUE ::= OBJ | ARRAY | NUMERIC | CONSTANT;
CONSTANT ::= null | string | true | false;
NUMERIC ::= number dotdot number | number
ARRAY ::= squareopen ARRAY_DATA squareclose | squareopen squareclose;
ARRAY_DATA ::= ident comma ARRAY_DATA | VALUE comma ARRAY_DATA | ident comma | VALUE comma | ident | VALUE;
OBJ ::= curlyopen OBJ_DATA curlyclose | curlyopen curlyclose;
OBJ_DATA ::= OBJ_PROP comma OBJ_DATA | OBJ_PROP comma | OBJ_PROP;
OBJ_PROP ::= string colon ident | string colon VALUE;
ABORT ::= abort ident;
EXIT ::= exit;
IF_ELSE ::= IF ELSE | IF;
IF ::= if IF_PART;
IF_PART ::= IF_PART_AWAIT CODE | ident CODE;
IF_PART_AWAIT ::= await AWAIT_CALL_OR_IDENT;
ELSE ::= else ELSE_PART;
ELSE_PART ::= IF_ELSE | CODE;
CODE ::= curlyopen STATEMENTS curlyclose | curlyopen curlyclose;
FOR ::= for ident in FOR_VARIANT CODE;
FOR_VARIANT ::=  ARRAY | FOR_VARIANT_AWAIT | ident;
FOR_VARIANT_AWAIT ::= await AWAIT_CALL_OR_IDENT;
ASSIGNMENT ::= ident equals ASSIGNMENT_VALUE;
ASSIGNMENT_VALUE ::= VALUE | AWAIT | START;
START ::= start CALL;
